# src/modules/hcp/server/hcp.controller.js
@@ -1,4 +1,7 @@
+const path = require('path');
 const Hcp = require('./hcp_profile.model');
+const { QueryTypes } = require('sequelize');
+const sequelize = require(path.join(process.cwd(), 'src/config/server/lib/sequelize'));
 
 async function getHcps(req, res) {
     const page = req.query.page - 1;
@@ -50,15 +53,15 @@ async function editHcp(req, res) {
     }
 }
 
-async function verifyHcpProfile(req, res) {
+async function checkHcpFromMaster(req, res) {
     const { email, uuid } = req.body;
 
     try {
-        const profile = await Hcp.findOne({ where: { email: email, uuid: uuid }, attributes: { exclude: ['password'] } });
+        const hcp_master = await sequelize.datasyncConnector.query(`SELECT * FROM ciam.vwhcpmaster WHERE uuid_1 = ${uuid} OR uuid_2 = ${uuid} OR email_1 = ${email}`, { type: QueryTypes.SELECT });
 
-        if (!profile) return res.status(404).send('HCP profile not found!');
+        if (!hcp_master) return res.status(404).send('HCP profile not found!');
 
-        res.json(profile);
+        res.json(hcp_master);
 
     } catch (err) {
         res.status(500).send(err);
@@ -66,16 +69,18 @@ async function verifyHcpProfile(req, res) {
 }
 
 async function resetHcpPassword(req, res) {
-    const { email, uuid, password } = req.body;
+    const { email, password, confirm_password } = req.body;
 
     try {
-        const hcpUser = await Hcp.findOne({ where: { email: email, uuid: uuid } });
+        const hcpUser = await Hcp.findOne({ where: { email: email } });
 
-        if (!hcpUser) return res.status(404).send('HCP user not found');
+        if (!hcpUser) return res.status(404).send('HCP user not found.');
+
+        if(password !== confirm_password) return res.status(400).send("Password and confirm password doesn't match.");
 
         hcpUser.update({ password });
 
-        res.status(200).send("Password reset successfully");
+        res.status(200).send('Password reset successfully.');
     } catch (err) {
         res.status(500).send(err);
     }
@@ -84,4 +89,4 @@ async function resetHcpPassword(req, res) {
 exports.getHcps = getHcps;
 exports.editHcp = editHcp;
 exports.resetHcpPassword = resetHcpPassword;
-exports.verifyHcpProfile = verifyHcpProfile;
+exports.checkHcpFromMaster = checkHcpFromMaster;
